images big has been fixed and now are visible on the the pages

--- a/styles/common.css
+++ b/styles/common.css
@@ -50,20 +50,32 @@ body {
 }
 
 @media screen and (min-width: 1000px) {
-    body {
-      display: grid;
-      grid-template-rows: 0.1fr 1fr 0.1fr;
-      grid-template-columns: 1fr 1fr;
-    }
+  body {
+    display: grid;
+    grid-template-rows: 0.1fr 1fr 0.1fr;
+    grid-template-columns: 1fr 1fr;
   }
+}
 
 h1 {
   font-size: 2.125rem;
 }
 
 h2 {
-    font-size: 1.06rem;
+  font-size: 1.06rem;
+}
+
+
+
+.main_header {
+    display: flex;
+    padding: 1em 0 0 0;
   }
+
+.container {
+  width: 80%;
+  margin: auto;
+}
 
 .icon {
   width: 24px;
@@ -74,44 +86,48 @@ h2 {
   cursor: pointer;
 }
 
-
-
 /* Modal Styling */
 
 .modal_header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5em;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5em;
+}
+
+#modal {
+  padding: 1em;
+  background-color: #fff;
+  border-radius: 16px 16px 0 0;
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  bottom: 0;
+  z-index: 1000;
+}
+
+@media screen and (min-width: 1000px) {
   #modal {
     padding: 1em;
     background-color: #fff;
-    border-radius: 16px 16px 0 0;
+    border-radius: 16px;
     position: absolute;
-    width: 100%;
+    width: 40%;
     height: 50%;
-    bottom: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     z-index: 1000;
   }
+}
 
+.hidden {
+  display: none;
+}
 
-  @media screen and (min-width: 1000px) {
-    #modal {
-      padding: 1em;
-      background-color: #fff;
-      border-radius: 16px;
-      position: absolute;
-      width: 40%;
-      height: 50%;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 1000;
-    }
-  }
-
-  .hidden {
-    display: none;
-  }
-  
+.add_progress_container {
+  display: flex;
+  gap: 0.5em;
+  padding: 1em 0 0 0;
+  grid-column: 1/ -1;
+  align-items: center;
+}
